--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: "https://binarygeneration.github.io"
 # THEME-SPECIFIC CONFIGURATION
 title: Cornucopia # site's title
 description: "A Framework for Feedback Guided Generation of Binaries" # used by search engines
-avatar: assets/img/triangle.png                         # Empty for no avatar in navbar
+avatar: assets/img/bingen.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
