--- a/_config.yml
+++ b/_config.yml
@@ -3,14 +3,14 @@ baseurl: ""
 url: "https://binarygeneration.github.io"
 
 # THEME-SPECIFIC CONFIGURATION
-title: Cornucopia # site's title
+title: "Binary Generation Project" # site's title
 description: "A Framework for Feedback Guided Generation of Binaries" # used by search engines
 avatar: assets/img/bingen.png                         # Empty for no avatar in navbar
 favicon: assets/favicon.ico                             # Icon displayed in the tab
 
 # Header and footer text
 header_text: Cornucopia  # Change Blog header text
-header_feature_image: assets/img/header/triangular.jpeg
+header_feature_image: assets/img/header/binary.jpg
 header_feature_image_responsive: true
 footer_text: >
   Powered by <a href="https://jekyllrb.com/">Jekyll</a> with <a href="https://github.com/sylhare/Type-on-Strap">Type on Strap</a>
