--- a/_data/faculty.yml
+++ b/_data/faculty.yml
@@ -1,6 +1,13 @@
 - name: Aravind Machiry
   photo: machiry.jpeg
-  info: Assistant Professor
+  info: Assistant Professor (Lead)
   email: amachiry@purdue.edu
-  number_educ: 2
+  number_educ: 1
   education1: PhD, Computer Science, University of California, Santa Barbara.
+
+- name: Milind Kulkarni
+  photo: milind.jpeg
+  info: Professor
+  email: milind@purdue.edu
+  number_educ: 1
+  education1: PhD, Computer Science, Cornell University.
