--- a/_data/students.yml
+++ b/_data/students.yml
@@ -1,14 +1,14 @@
-- name: Siddharth Muralee
+- name: Vidush Singhal
   photo: vidhush.jpg
   info: Ph.D Student at Purdue
-  email: siddharth.muralee@gmail.com
+  email: singhav@purdue.edu
 
-- name: Paschal Chukwuebuk Amusuo
+- name: Akul Abhilash Pillai
   photo: akul.jpeg
   info: Ph.D Student at Purdue
-  email: pamusuo@purdue.edu
+  email: pillai23@purdue.edu
 
-- name: Siddharth Muralee
+- name: Charitha Saumya
   photo: charitha.jpeg
   info: Ph.D Student at Purdue
-  email: siddharth.muralee@gmail.com
+  email: cgusthin@purdue.edu
